--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="362dp"
         android:layout_height="78dp"
         android:gravity="center"
-        android:text="Login"
-        android:textColor="@color/blue"
+        android:text="app"
+        android:textColor="@color/black"
         android:textSize="49sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
     <EditText
         android:id="@+id/editEmail"
         android:layout_width="350dp"
-        android:layout_height="38dp"
+        android:layout_height="45dp"
         android:hint="Email"
         android:background="@drawable/edittext_border"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +39,6 @@
         android:id="@+id/textInputLayoutSenha"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/editEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,16 +49,19 @@
         <com.google.android.material.textfield.TextInputEditText android:id="@+id/editSenha"
             android:layout_width="match_parent"
             android:background="@drawable/edittext_border"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/botaoLogin"
-        android:layout_width="300dp"
-        android:layout_height="52dp"
+        android:layout_width="330dp"
+        android:layout_height="50dp"
+        app:backgroundTint="@drawable/button_background"
         android:text="Login"
+        android:textColor="@color/blue"
+        android:background="@drawable/button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
