--- a/app/src/main/res/drawable/edittext_border.xml
+++ b/app/src/main/res/drawable/edittext_border.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="2dp"
-    android:color="#CCCCCC" />
+        android:color="#FFFFFF" />
 
     <corners
         android:radius="8dp" />
