--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#FF3F51B5</color>
     <color name="red">#FFFF0000</color>
     <color name="my_custom_green">#FF00FF00</color>
+    <color name="azul_bebe">#89CFF0</color>
 </resources>
