--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
 
-    <solid android:color="@color/azul_bebe" />
+    <solid android:color="@color/white" />
     <corners android:radius="8dp" />
 
     <padding
