--- a/app/src/main/res/drawable/edittext_border.xml
+++ b/app/src/main/res/drawable/edittext_border.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#80BEBEBE" />
+    <solid android:color="@android:color/transparent" />
 
     <stroke
-        android:width="2dp"
-        android:color="#FFFFFF" />
+        android:width="1dp"
+        android:color="@color/white" />
 
     <corners
         android:radius="8dp" />
