--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="red">#FFFF0000</color>
     <color name="my_custom_green">#FF00FF00</color>
     <color name="verde_floresta_escuro">#FF006400</color>
+    <color name="azul_bebe">#FF80BEBE</color>
+    <color name="background_graphite_dark">#FF2B2B2B</color>
+    <color name="background_charcoal_gray">#FF36454F</color>
+    <color name="background_dark_slate_gray">#FF2F4F4F</color>
+    <color name="edittext_border_on_dark_graphite">#FF4A4A4A</color>
 </resources>
